--- a/GlympsApp/Main.storyboard
+++ b/GlympsApp/Main.storyboard
@@ -1978,7 +1978,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="ODd-4z-0nP" firstAttribute="centerY" secondItem="MIb-Ot-ugc" secondAttribute="centerY" id="38v-3t-e8s"/>
                                     <constraint firstItem="ODd-4z-0nP" firstAttribute="leading" secondItem="MIb-Ot-ugc" secondAttribute="leading" id="VJr-Lf-EG6"/>
@@ -3463,16 +3463,16 @@ Effective as of April 7, 2020</string>
         <image name="users-icon" width="200" height="188"/>
         <image name="x-close-icon-white" width="85.333335876464844" height="85.333335876464844"/>
         <namedColor name="GlympsBlue">
-            <color red="0.54000000000000004" green="0.75" blue="0.85999999999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.54000002145767212" green="0.75" blue="0.86000001430511475" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="GlympsDarkGray">
-            <color red="0.21199999999999999" green="0.28599999999999998" blue="0.32900000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.21199999749660492" green="0.28600001335144043" blue="0.32899999618530273" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="GlympsGray">
-            <color red="0.59999999999999998" green="0.68200000000000005" blue="0.73299999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.60000002384185791" green="0.68199998140335083" blue="0.73299998044967651" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="GlympsRed">
-            <color red="0.89400000000000002" green="0.502" blue="0.52200000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.89399999380111694" green="0.50199997425079346" blue="0.5220000147819519" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
